--- a/starter_code/public/stylesheets/styles.css
+++ b/starter_code/public/stylesheets/styles.css
@@ -4,5 +4,24 @@ light-blue: #2081C3;
 dark-blue: #0A2C42;
 grey: rgba(145, 145, 145, 0.481);
 font-family: Arial, Helvetica, sans-serif
-*/
+  */
+
+*{
+    font-family: Arial, Helvetica, sans-serif
+}
+.navbar-dark {
+    background-color: #2081C3!important;
+}
+html,
+body {
+  height: 100%;
+}
+
+#page-content {
+  flex: 1 0 auto;
+}
+
+#sticky-footer {
+  flex-shrink: none;
+}
   
