--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,3 +1,15 @@
+<body>
+
 <div class="index-container">
-  
+    <div class="col-4">
+      <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="/images/beer.png" alt="Beer">
+            <div class="card-body">
+                <a href="/beers" class="btn btn-primary">Check the Beers!</a>
+                <a href="/random-beers" class="btn btn-primary">Check a Random Beer!</a>
+            </div>
+      </div>
+    </div>
 </div>
+
+</body>
